# Robot-for-Industry

./: .gitignore
src/gui/: package.xml  setup.py
src/gui/gui/: main_window.py
src/main_bot/: CMakeLists.txt  package.xml
src/main_bot/config/: ackermann_transform.yaml  controller_gz_sim.yaml  ekf.yaml  ekf_global.yaml  gz_bridge.yaml  nav2_param.yaml  uwb.yaml
src/main_bot/description/: camera.xacro  cart.urdf.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  uwb_tag.xacro
src/main_bot/launch/: display.launch.py  gazebo.launch.py  nav2_bringup.launch.py  nav2_uwb.launch.py
src/main_bot/maps/: my_map.pgm  my_map.yaml
src/main_bot/scripts/: dock_to_charge.py  uwb_localization_node.py  uwb_sim_node.py
src/main_bot/src/: ackermann_transform_node.cpp
src/main_bot/worlds/: warehouse.sdf
