<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui</name>
  <version>0.0.0</version>
  <description>Giao diện Start/Stop cho các chức năng của robot (thay vì mở nhiều terminal rồi launch từng cái)</description>
  <maintainer email="dangtinh.ftcpy@gmail.com">dvt</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>python3-tk</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
