<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>main_bot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dangtinh.ftcpy@gmail.com">dvt</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>slam_toolbox</depend>
  <depend>robot_localization</depend>
  <depend>nav2_simple_commander</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
